# PhotoGalleryEditor

./: AGENTS.md  README.md  requirements-dev.txt  requirements.txt
exifreader/: README.md  convert.sh  main.py  requirements.txt  test_main.py
image-dedup/: AGENTS.md  README.md  README_WIN.md  docker-compose.yml  pyproject.toml  requirements.txt
image-dedup/src/: clusterer.py  config.py  db.py  gui.py  indexer.py  main.py  utils.py
image-dedup/tests/: test_clusterer.py  test_core.py  test_db.py  test_gui.py  test_indexer.py  test_main.py
mp4-date-fixer/: README.md  mp4_folder_date_fixer.py
src/: config.py  db.py  gui.py  main.py  utils.py
src/manage/: __init__.py  mp4_fixer.py  sorter.py
tests/: conftest.py  test_clusterer.py  test_db.py  test_indexer.py
